Somewhat fixed responsiveness on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -11,7 +11,8 @@ text-align: center;
     text-align: center;
     position: relative;
     height: auto;
-    width: auto;
+    width: 50%;
+    margin: auto;
 }
 
 .col-sm {
@@ -24,7 +25,8 @@ text-align: center;
 
 @media only screen and (max-width: 800px) {
     .col-sm {
-        min-width: 10%;
-        min-height: 10%;
+        width: 20px;
+        height: 20px;
+        padding: 0;
     }   
   }
